fixed root issue of not being able to click on a reaction on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -160,3 +160,7 @@ body.__className_36bd41[data-scroll-locked="1"] {
   margin-top: 0 !important;
   margin-right: auto !important;
 }
+
+.formkit-background {
+  z-index: -1;
+}
